--- a/style.css
+++ b/style.css
@@ -14,7 +14,14 @@ body{
     justify-content: center;
     align-items: center;
     background-color: lavender;
-    gap: 10px;
+}
+
+.main-body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
 .calculator-body{
@@ -22,7 +29,7 @@ body{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.103);
     border-radius: 20px;
     padding: 10px;
-    width: 270px;
+    width: 340px;
 }
 
 
@@ -45,6 +52,7 @@ body{
 }
 
 #display-history{
+    cursor: pointer;
     font-weight: 600;
     color: #828282;
     padding: 5px;
@@ -63,7 +71,7 @@ body{
 
 .keys {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto;
     gap: 10px;
     
 }
@@ -109,34 +117,32 @@ body{
 }
 
 #key-equal {
-    width: 130px;
-    grid-column: 3 / 5;
+    width: 200px;
+    grid-column: 3 / 6;
     font-size: 30px;
 }
 
 .history-body{
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.103);
-    border-radius: 20px;
-    width: 270px;
-    height: 512px;
+    width: 400px;
+    height: 100%;
     min-height: 50px;
     overflow-y: auto;
 }
 
 .history-head{
     position: fixed;
+    top:0;
     z-index: 10;
+    width: 300px;
     background-color: white;
-    width: 270px;
     padding: 10px 0px;
-    border-radius: 20px 20px 0px 0px;
     margin-bottom: 0;
 }
 
 .history-list{
     display: flex;
-    position: relative;
     top: 60px;
     flex-direction: column;
     padding: 0px 10px 10px 10px;
@@ -159,8 +165,12 @@ body{
     background-color: #c4c4c4;
 }
 
-.history-text:active{
+.history-text:active {
     transform: translateY(2px);
+}
+
+.history-text  p:first-child {
+    width: 100%;
 }
 
 .history-close-btn{
